--- a/src/user.html
+++ b/src/user.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./output.css">
 </head>
 <body>
+    <header class="bg-[#163A24] w-[100%]">
+        <div class="w-[80%] m-auto flex text-white justify-between items-center">
+            <div>
+                <img src="/imeges/Frame (1).png" alt="">  
+            </div>
+            <div class="flex items-center gap-10">
+                <p>Log In</p>
+                <p>844-332-6440</p>
+                <button class="p-[10px] bg-[#198C36] rounded-[20px]">Get Started</button>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
