--- a/src/user.html
+++ b/src/user.html
@@ -10,7 +10,7 @@
     <header class="bg-[#163A24] w-[100%]">
         <div class="w-[80%] m-auto flex text-white justify-between items-center">
             <div>
-                <img src="/imeges/Frame (1).png" alt="">  
+                <img src="./imeges/Frame (1).png" alt="">  
             </div>
             <div class="flex items-center gap-10">
                 <p>Log In</p>
@@ -19,6 +19,21 @@
             </div>
         </div>
     </header>
+    <main>
+        <section1>
+            <div class="bg-[#163A24] w-[100%] h-[500px] pt-[50px]">
+                <div class="flex items-center w-[80%] m-auto pt-[50px] text-white">
+                    <div>
+                        <p class="text-[48px] w-[391px] font-[600]">Running the show has never been so easy.</p>
+                        <p class="text-[18px] font-[400]">Ready to put the human back in HR? Clerksy helps you set the stage with an inclusive and compliant workplace.</p>
+                    </div>
+                    <div>
+                        <img src="./imeges/Frame (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section1>
+    </main>
     
 </body>
 </html>
