--- a/src/user.html
+++ b/src/user.html
@@ -33,6 +33,96 @@
                 </div>
             </div>
         </section1>
+        <section2>
+            <div class="w-[80%] m-auto text-[#163A24]">
+                <div class="flex items-center gap-[40px] ">
+                    <div>
+                        <img src="./imeges/Frame (3).png" alt="">
+                    </div>
+                    <div>
+                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">Put the human back in HR.</p>
+                        <p class="w-[380px]">Your employees are the real stars. Show the love and help them perform!</p>
+                    </div>
+                </div>
+                <div class="flex items-center gap-[40px]" >
+                    <div class="w-[50%] ">
+                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">You don’t have to play all the parts.</p>
+                        <p class="w-[380px]">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
+                    </div>
+                    <div class="w-[50%]">
+                        <img src="./imeges/Frame (4).png" alt="">
+                    </div>
+                </div>
+                <div class="mt-[80px] flex flex-col gap-y-10px justify-center items-center mb-[100px]">
+                    <p class="text-[#163A24] text-[48px] font-[600]">We partner with the best</p>
+                    <div class="flex gap-[40px] items-center text-center">
+                        <div>
+                            <img src="./imeges/Rectangle.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./imeges/Rectangle (1).png" alt="">
+                        </div>
+                        <div>
+                            <img src="./imeges/Rectangle (2).png" alt="">
+                        </div>
+                        <div>
+                            <img src="./imeges/Rectangle (3).png" alt="">
+                        </div>
+                        <div>
+                            <img src="./imeges/Rectangle (4).png" alt=""> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section2> 
+        <section3>
+            <div class="w-[100%] bg-[#163A24] text-white flex flex-col justify-center items-center pt-[40px]  mb-[50px]">
+                <p class="text-[48px] font-[600px] mb-[20px]">HR Production of the Highest Quality</p>
+                <div class="flex gap-[150px] items-center">
+                    <div>
+                        <div>
+                            <img src="./imeges/Frame (5).png" alt="">
+                        </div>
+                        <p>Educates & Informs</p>
+                        <p>Employee Expectations</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./imeges/Frame (6).png" alt="">
+                        </div>
+                        <p>Protects Your Business</p>
+                        <p>Just in Case</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./imeges/Frame (7).png" alt="">
+                        </div>
+                        <p>Manages & Stores</p>
+                        <p>Important Documents</p>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="./imeges/Frame (8).png" alt="">
+                        </div>
+                        <p>Create a Healthy</p>
+                        <p>Work Environment</p>
+                    </div>
+                </div>
+            </div>
+        </section3>
+        <section4>
+            <div class="w-[80%] m-auto">
+                <div class="flex items-center gap-[40px]" >
+                    <div class="w-[50%] ">
+                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">How the scenes fit together</p>
+                        <p class="w-[320px]">Employee Training & Development, Diversity & Inclusion Programs, and Conflict Resolution.</p>
+                    </div>
+                    <div class="w-[50%]">
+                        <img src="./imeges/Frame (9).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section4>
     </main>
     
 </body>
