--- a/src/user.html
+++ b/src/user.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
     <header class="bg-[#163A24] w-[100%]">
         <div class="w-[80%] m-auto flex text-white justify-between items-center">
             <div>
-                <img src="./imeges/Frame (1).png" alt="">  
+                <img src="./imeges/Frame (1).png" alt="">
             </div>
             <div class="flex items-center gap-10">
                 <p>Log In</p>
@@ -19,13 +21,14 @@
             </div>
         </div>
     </header>
-    <main>
+    <main >
         <section1>
             <div class="bg-[#163A24] w-[100%] h-[500px] pt-[50px]">
                 <div class="flex items-center w-[80%] m-auto pt-[50px] text-white">
                     <div>
                         <p class="text-[48px] w-[391px] font-[600]">Running the show has never been so easy.</p>
-                        <p class="text-[18px] font-[400]">Ready to put the human back in HR? Clerksy helps you set the stage with an inclusive and compliant workplace.</p>
+                        <p class="text-[18px] font-[400]">Ready to put the human back in HR? Clerksy helps you set the
+                            stage with an inclusive and compliant workplace.</p>
                     </div>
                     <div>
                         <img src="./imeges/Frame (2).png" alt="">
@@ -44,9 +47,10 @@
                         <p class="w-[380px]">Your employees are the real stars. Show the love and help them perform!</p>
                     </div>
                 </div>
-                <div class="flex items-center gap-[40px]" >
+                <div class="flex items-center gap-[40px]">
                     <div class="w-[50%] ">
-                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">You don’t have to play all the parts.</p>
+                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">You don’t have to play all the parts.
+                        </p>
                         <p class="w-[380px]">Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
                     </div>
                     <div class="w-[50%]">
@@ -69,14 +73,15 @@
                             <img src="./imeges/Rectangle (3).png" alt="">
                         </div>
                         <div>
-                            <img src="./imeges/Rectangle (4).png" alt=""> 
+                            <img src="./imeges/Rectangle (4).png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
-        </section2> 
+        </section2>
         <section3>
-            <div class="w-[100%] bg-[#163A24] text-white flex flex-col justify-center items-center pt-[40px]  mb-[50px]">
+            <div
+                class="w-[100%] bg-[#163A24] text-white flex flex-col justify-center items-center pt-[40px]  mb-[50px]">
                 <p class="text-[48px] font-[600px] mb-[20px]">HR Production of the Highest Quality</p>
                 <div class="flex gap-[150px] items-center">
                     <div>
@@ -112,10 +117,11 @@
         </section3>
         <section4>
             <div class="w-[80%] m-auto">
-                <div class="flex items-center gap-[40px]" >
+                <div class="flex items-center gap-[40px]">
                     <div class="w-[50%] ">
                         <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">How the scenes fit together</p>
-                        <p class="w-[320px]">Employee Training & Development, Diversity & Inclusion Programs, and Conflict Resolution.</p>
+                        <p class="w-[320px]">Employee Training & Development, Diversity & Inclusion Programs, and
+                            Conflict Resolution.</p>
                     </div>
                     <div class="w-[50%]">
                         <img src="./imeges/Frame (9).png" alt="">
@@ -123,7 +129,81 @@
                 </div>
             </div>
         </section4>
+        <section6>
+            <div class="text-[#163A24] mt-[50px] w-[80%] m-auto mb-[50px] ">
+                <p class="text-[48px] font-[600] text-center">Consider everyone's best interest</p>
+                <p class="text-center">HR is for everyone. Clerksy can help you.</p>
+                <div class="flex gap-[20px] mt-[40px] ">
+                    <div class=" bg-[#FBFAF7] rounded-[10px] w-[400px] shadow-[2px_2px_5px]">
+                        <div class="p-[40px]">
+                            <div><img src="./imeges/Frame (10).png" alt=""></div>
+                            <p class="text-[28px] font-[600]">Protect Your Company</p>
+                            <p>Compliance Audits & Training</p>
+                            <p>Employee Data Storage</p>
+                            <p>Policy Drafting</p>
+                        </div>
+                    </div>
+                    <div class="bg-[#FBFAF7] rounded-[10px] w-[400px] shadow-[2px_2px_5px]">
+                        <div class="p-[40px]">
+                            <div><img src="./imeges/Frame (11).png" alt=""></div>
+                            <p class="text-[28px] font-[600]">Set Your Employees Up For Success</p>
+                            <p>Learning & Development</p>
+                            <p>Employee Relations</p>
+                            <p>Benefit Management</p>
+                            <p>Employee Performance</p>
+                        </div>
+                    </div>
+                    <div class="bg-[#FBFAF7] rounded-[10px] w-[400px] shadow-[2px_2px_5px]">
+                        <div class="p-[40px]">
+                            <div><img src="./imeges/Frame (12).png" alt=""></div>
+                            <p class="text-[28px] font-[600]">Know Your Industry's Legal Landscape</p>
+                            <p>Work Place Investigations</p>
+                            <p>Employee Mediations</p>
+                            <p>Performance Tracking</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section6>
+        <section7 class="text-[#163A24] ">
+            <div class="bg-[#F2EFE6] flex flex-col gap-y-[10px] justify-center items-center h-[300px] mb-[40px]">
+                <div>
+                    <p class="text-[40px] font-bold">It's easy as 1, 2, 3</p>
+                    <p>Clerksy can help use your unique business needs. Here's how:</p>
+                </div>
+                <div class="flex gap-[40px]">
+                    <div>
+                        <p class="w-[300px]">Fill out a form and tell us what you're looking for:</p>
+                        <p class="text-[28px] font-bold">5 minutes</p>
+                    </div>
+                    <div>
+                        <p class="w-[250px]">Time it will take a Clerksy rep to follow up:</p>
+                        <p class="text-[28px] font-bold">24 hours</p>
+                    </div>
+                    <div>
+                        <p class="w-[250px]">Time it will take a Clerksy rep to follow up:</p>
+                        <p class="text-[28px] font-bold">$969 USD</p>
+                    </div>
+                </div>
+                <button class="bg-[#198C36] rounded-[20px] p-[10px] text-white">Book Free Discovery Call</button>
+            </div>
+        </section7>
+        <section8>
+            <div class="w-[80%] m-auto">
+                <div class="flex items-center gap-[40px]">
+                    <div class="w-[50%] ">
+                        <p class="text-[#163A24] font-[600] text-[48px] w-[396px]">Not just another HR resource.</p>
+                        <p class="w-[320px]">Simple. Entertaining. Informative.</p>
+                        <button class="bg-[#198C36] rounded-[20px] p-[10px] text-white mt-[10px]">Download E-book</button>
+                    </div>
+                    <div class="w-[50%]">
+                        <img src="./imeges/Frame (13).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section8>
     </main>
-    
+
 </body>
+
 </html>
