--- a/src/user.html
+++ b/src/user.html
@@ -202,7 +202,61 @@
                 </div>
             </div>
         </section8>
+        <section9>
+            <div class="bg-[#163A24] flex flex-col gap-y-[10] justify-center items-center h-[300px] mb-[100px] relative">
+                <div>
+                    <p class="font-[600] text-[48px] text-white">Get Started With Clerksy</p>
+                    <p class="text-white text-center">Make sure your business puts people first.</p>
+                    <button class="bg-[#FAB5A0] rounded-[20px] p-[10px] text-[#163A24] mt-[10px] ml-[140px]">Book a Free Discovery Call</button>
+                </div>
+                <div class="absolute top-0px left-[0px]" >
+                    <img class="w-[300px] h-[300px]" src="./imeges/leafs.png" alt="">
+                </div>
+                <div class="absolute top-0px right-[0px]" >
+                    <img class="w-[300px] h-[300px]" src="./imeges/Frame (14).png" alt="">
+                </div>
+            </div>
+        </section9>
     </main>
+    <footer>
+        <div class="w-[80%] m-auto items-center flex justify-between">
+            <div>
+                <img src="./imeges/Frame (15).png" alt="">
+            </div>
+            <p class="text-[24px] font-[600] text-[#163A24]">A people company.</p>
+            <div class="flex gap-[5px] items-center">
+                <div>
+                    <img src="./imeges/Frame (16).png" alt="">
+                </div>
+                <div>
+                    <img src="./imeges/Frame (17).png" alt="">
+                </div>
+                <div>
+                    <img src="./imeges/Frame (18).png" alt="">
+                </div>
+                <div>
+                    <img src="./imeges/Frame (19).png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="w-[80%] m-auto mt-[40px]">
+            <hr>
+            <div class="flex justify-between items-center">
+                <div>
+                    <p>© 2020 Clerksy, Inc. Clerksy is a registered trademark of Clerksy, Inc.</p>
+                </div>
+                <div class="text-[#198C36] flex items-center gap-[10px]">
+                    <p>Privacy Policy</p>
+                    <p>Terms of Service</p>
+                    <p>GDPR</p>
+                    <p>Careers</p>
+                    <p>Press Kit</p>
+                </div>
+                
+            </div>
+        </div>
+        
+    </footer>
 
 </body>
 
